# understanding-llm

bak/framework/: CMakeLists.txt  conv2d.cpp  makefile  op_linear.hpp  op_matmul.hpp  op_silu.hpp  tensor.hpp  tensor_helper.hpp  test_conv2d.py  test_linear.py  test_matmual.py  test_tensor.py  test_tensor_lib.cpp
framework/: Cargo.toml
framework/src/: pylib.rs  tensor.rs
framework/tests/: test_clone.py  test_create.py
train/: dataset.py  generator.py  kv.py  llama.gpp.py  llama.py  llama_debug.py  makefile  model.py  perf.py  preproc.ipynb  tokenizer.py  train.py
